--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "author": "",
   "main": "dist/index.js",
   "engines": {
-    "node": "~6.9.1",
+    "node": ">5.x",
     "npm": ">=3.10.0"
   },
   "scripts": {
