--- a/react/package.json
+++ b/react/package.json
@@ -11,33 +11,33 @@
     "test": "jest"
   },
   "dependencies": {
-    "normalize.scss": "^0.1.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "normalize.scss": "0.1.0",
+    "react": "16.6.3",
+    "react-dom": "16.6.3"
   },
   "devDependencies": {
     "@babel/core": "7.2.0",
-    "@babel/plugin-proposal-class-properties": "^7.2.1",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.2.0",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/runtime": "^7.2.0",
-    "autoprefixer": "^9.4.0",
+    "@babel/plugin-proposal-class-properties": "7.2.1",
+    "@babel/plugin-transform-runtime": "7.2.0",
+    "@babel/preset-env": "7.2.0",
+    "@babel/preset-react": "7.0.0",
+    "@babel/runtime": "7.2.0",
+    "autoprefixer": "9.4.0",
     "babel-loader": "8.0.4",
-    "babel-preset-es2015": "^6.24.1",
-    "css-loader": "^1.0.1",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "html-webpack-plugin": "^4.0.0-beta.4",
-    "jest": "^23.6.0",
-    "node-sass": "^4.10.0",
-    "postcss-loader": "^3.0.0",
-    "sass-loader": "^7.1.0",
-    "sass-module-importer": "^1.4.0",
-    "source-map-loader": "^0.2.4",
-    "style-loader": "^0.23.1",
-    "webpack": "^4.26.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "babel-preset-es2015": "6.24.1",
+    "css-loader": "1.0.1",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
+    "html-webpack-plugin": "4.0.0-beta.4",
+    "jest": "23.6.0",
+    "node-sass": "4.10.0",
+    "postcss-loader": "3.0.0",
+    "sass-loader": "7.1.0",
+    "sass-module-importer": "1.4.0",
+    "source-map-loader": "0.2.4",
+    "style-loader": "0.23.1",
+    "webpack": "4.26.1",
+    "webpack-cli": "3.1.2",
+    "webpack-dev-server": "3.1.10"
   },
   "babel": {
     "presets": [
