--- a/react/package.json
+++ b/react/package.json
@@ -36,8 +36,8 @@
     "source-map-loader": "0.2.4",
     "style-loader": "0.23.1",
     "webpack": "4.26.1",
-    "webpack-cli": "3.1.2",
-    "webpack-dev-server": "3.1.10"
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "babel": {
     "presets": [
