--- a/react/package.json
+++ b/react/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "9.4.0",
     "babel-loader": "8.0.4",
     "babel-preset-es2015": "6.24.1",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "1.0.1",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
     "html-webpack-plugin": "4.0.0-beta.4",
