--- a/react/package.json
+++ b/react/package.json
@@ -40,6 +40,11 @@
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
   },
+  "jest": {
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+  }
+  },
   "babel": {
     "presets": [
       "@babel/preset-env",
