--- a/react/package.json
+++ b/react/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "frontend-react",
+  "name": "react frontend",
   "version": "1.0.0",
-  "description": "React Typescript front-end",
+  "description": "React front-end",
   "main": "webpack.config.js",
   "author": "Jahil Khalfe",
   "license": "MIT",
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
     "dist": "webpack --mode production",
-    "test": "jest"
+    "test": "jest --coverage",
+    "lint": "eslint --fix src/"
   },
   "dependencies": {
     "normalize.scss": "0.1.0",
+    "prop-types": "^15.6.2",
     "react": "16.6.3",
     "react-dom": "16.6.3"
   },
@@ -23,15 +25,23 @@
     "@babel/preset-react": "7.0.0",
     "@babel/runtime": "7.2.0",
     "autoprefixer": "9.4.0",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "8.0.4",
     "babel-preset-es2015": "6.24.1",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "1.0.1",
+    "eslint": "^5.10.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
     "html-webpack-plugin": "4.0.0-beta.4",
     "jest": "23.6.0",
     "node-sass": "4.10.0",
     "postcss-loader": "3.0.0",
+    "prettier": "^1.15.3",
+    "prettier-eslint": "^8.8.2",
     "sass-loader": "7.1.0",
     "sass-module-importer": "1.4.0",
     "source-map-loader": "0.2.4",
@@ -43,7 +53,7 @@
   "jest": {
     "transform": {
       "^.+\\.js$": "babel-jest"
-  }
+    }
   },
   "babel": {
     "presets": [
