--- a/react/package.json
+++ b/react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react frontend",
+  "name": "frontend",
   "version": "1.0.0",
   "description": "React front-end",
   "main": "webpack.config.js",
